# quant-arena

./: .autoenv  .gitignore  .tmuxp.yaml  AGENTS.md  README.md  STOCK.md  pyproject.toml  quant-arena.service  recreate_tmux_session.sh  sync.sh
.claude-plugin/: marketplace.json  plugin.json
frontend/: .env.example  index.html  package.json  pnpm-lock.yaml  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
frontend/scripts/: render-curve.tsx
frontend/src/: AShareApp.tsx  App.tsx  ArenaDashboard.tsx  CurveChart.tsx  EODHDApp.tsx  FutumooApp.tsx  IBApp.tsx  index.css  main.tsx  styles.css
frontend/src/lib/: api.ts  (+2 more)
quant_arena/: __init__.py  __main__.py  arena.py  arena_base.py  ashare.py  ashare_arena.py  ashare_mcp.py  clock.py  config.py  errors.py  ib_mcp.py  ib_service.py  market.py  mcp_auth.py  mcp_common.py  mcp_server.py  models.py  napcat.py  notifier.py  qq_open.py  report_pdf.py  schemas.py  server.py  storage.py
quant_arena/ashare/: __init__.py  arena.py  base.py  clock.py  mcp.py  models.py  service.py
quant_arena/eodhd/: __init__.py  arena.py  base.py  mcp.py  models.py  service.py
quant_arena/futumoo/: __init__.py  arena.py  base.py  mcp.py  models.py  region.py  service.py
quant_arena/ib/: __init__.py  arena.py  mcp.py  models.py  service.py
quant_arena/resources/: README-eodhd-market-data.md  README-market-data.md
scripts/: claude_US.py  claude_ashare.py  eodhd_endpoints.py  futu_endpoints.py  futu_smoke.py  live_ashare_market.py  live_market.py  parse_ashare_bars.py  parse_bars.py  parse_eodhd_bars.py  test_baostock.py  test_bid_ask_em.py  test_finnhub.py  test_ib_insync.py  test_intraday_sina.py  test_stock_zh_a_spot.py
skills/ashare/: CLAUDE.md
skills/ashare-intraday/: SKILL.md
skills/ashare-live-data/: SKILL.md
skills/ashare-news/: SKILL.md
skills/basic-momentum-analysis/: SKILL.md
skills/basic_momentum_analysis/: SKILL.md
skills/futumoo-live-data/: SKILL.md
skills/james-simons/: SKILL.md
soulboard/: INIT.md  SYSTEM.md
tests/: support_market.py  test_server.py
(+45 files in other folders)
