[project]
name = "quant-arena"
dynamic = ["version"]
description = "Filesystem-backed stock trading simulation and monitoring service."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
	"akshare>=1.18.54",
	"baostock>=0.8.9",
	"fastapi>=0.115.0,<1.0.0",
	"mcp>=1.26.0,<2.0.0",
	"pandas>=2.2.0,<3.0.0",
	"pydantic>=2.9.0,<3.0.0",
	"uvicorn>=0.32.0,<1.0.0",
]

[dependency-groups]
dev = [
	"httpx>=0.28.0,<1.0.0",
	"pytest>=8.0.0,<9.0.0",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["quant_arena"]
