[project]
name = "quant-arena"
dynamic = ["version"]
description = "Filesystem-backed stock trading simulation and monitoring service."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
	"akshare>=1.18.54",
	"baostock>=0.9.1",
	"fastapi>=0.115.0,<1.0.0",
	"finnhub-python>=2.4.28",
	"futu-api>=10.4.6408",
	"httpx>=0.28.0,<1.0.0",
	"ib-insync>=0.9.86",
	"mcp>=1.26.0,<2.0.0",
	"pandas>=2.2.0,<3.0.0",
	"pydantic>=2.9.0,<3.0.0",
	"python-dotenv>=1.2.2",
	"uvicorn>=0.32.0,<1.0.0",
	"websockets>=15.0.0,<16.0.0",
]

[dependency-groups]
dev = []

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["quant_arena"]
